// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderProfile Loading state (no log out button) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "15rem",
      }
    }
  >
    <div
      className="iot--suite-header-profile"
      data-testid="suite-header-profile"
    >
      <h5>
        Profile
      </h5>
      <div
        className="iot--suite-header-profile--loading iot--suite-header-profile--loading--no-logout"
        data-testid="suite-header-profile--loading"
      >
        <div>
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 73px)",
              }
            }
          />
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 11px)",
              }
            }
          />
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 43px)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderProfile Loading state 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "15rem",
      }
    }
  >
    <div
      className="iot--suite-header-profile"
      data-testid="suite-header-profile"
    >
      <h5>
        Profile
      </h5>
      <div
        className="iot--suite-header-profile--loading"
        data-testid="suite-header-profile--loading"
      >
        <div>
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 73px)",
              }
            }
          />
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 11px)",
              }
            }
          />
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "calc(80% - 43px)",
              }
            }
          />
        </div>
      </div>
      <div
        className="iot--suite-header-profile--logout iot--suite-header-profile--logout--loading"
      >
        <div
          className="bx--skeleton bx--btn"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderProfile No log out button 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "15rem",
      }
    }
  >
    <div
      className="iot--suite-header-profile"
      data-testid="suite-header-profile"
    >
      <h5>
        Profile
      </h5>
      <div
        className="iot--suite-header-profile--user"
      >
        <div
          className="iot--suite-header-profile--user--chip"
        >
          TU
        </div>
        <div
          className="iot--suite-header-profile--user--detail"
        >
          <div>
            <strong>
              Test User
            </strong>
          </div>
          <div>
            myuser
          </div>
        </div>
      </div>
      <div
        className="iot--suite-header-profile--manage-button iot--suite-header-profile--manage-button--no-logout"
      >
        <a
          className="iot--btn bx--btn bx--btn--sm bx--btn--secondary"
          data-testid="suite-header-profile--profile"
          href="javascript:void(0)"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          rel="noopener noreferrer"
          tabIndex={0}
        >
          Manage profile
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderProfile default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "15rem",
      }
    }
  >
    <div
      className="iot--suite-header-profile"
      data-testid="suite-header-profile"
    >
      <h5>
        Profile
      </h5>
      <div
        className="iot--suite-header-profile--user"
      >
        <div
          className="iot--suite-header-profile--user--chip"
        >
          TU
        </div>
        <div
          className="iot--suite-header-profile--user--detail"
        >
          <div>
            <strong>
              Test User
            </strong>
          </div>
          <div>
            myuser
          </div>
        </div>
      </div>
      <div
        className="iot--suite-header-profile--manage-button"
      >
        <a
          className="iot--btn bx--btn bx--btn--sm bx--btn--secondary"
          data-testid="suite-header-profile--profile"
          href="javascript:void(0)"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          rel="noopener noreferrer"
          tabIndex={0}
        >
          Manage profile
        </a>
      </div>
      <div
        className="iot--suite-header-profile--logout"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--secondary"
          data-testid="suite-header-profile--logout"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </div>
</div>
`;
